--- a/style.css
+++ b/style.css
@@ -10,13 +10,16 @@ body {
 }
 
 nav {
+    position: fixed;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     height: 80px;
-    margin-top: 15px;
-    padding: 15px 40px;
+    padding: 50px 40px;
     background-color: transparent;
+    transition: background-color 0.3s ease;
+    z-index: 100;
 }
 
 .logo img {
@@ -49,7 +52,6 @@ nav {
 
 #background {
     z-index: -1;
-    margin-top: -120px;
     width: 100%;
     position: relative;
 }
@@ -76,6 +78,16 @@ footer {
     z-index: 0;
 }
 
+#dark-bg-curv {
+    margin-top: -80px;
+    padding-bottom: 50px;
+    background-color: #191919;
+    border-radius: 36px 36px 0 0;
+    width: 100%;
+    padding-top: 70px;
+    position: relative;
+    z-index: 0;
+}
 .dark-daycard {
     width: 90%;
     height: 160%;
