--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ footer {
     color: #191919;
     border-radius: 30px 30px 0 0;
     text-align: center;
-    width: 25%;
+    width: 250px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
     display: flex;
     flex-direction: column;
@@ -181,7 +181,7 @@ button:hover {
     font-style: normal;
     font-weight: 600;
     z-index: 100;
-    margin-top: -110px;
+    margin-top: -40px;
     margin-bottom: 30px;
 }
 
@@ -216,5 +216,8 @@ button:hover {
 @media screen and (max-width: 800px) {
     .day-card {
         width: 200px;
+    }
+    .headline {
+        margin-top: 80px;
     }
 }
