--- a/style.css
+++ b/style.css
@@ -241,6 +241,7 @@ button:hover {
 }
 
 .summary-card{
+    cursor: pointer;
     justify-content: center;
     background-color: #C588EE;
     color: #191919;
@@ -252,6 +253,11 @@ button:hover {
     padding: 45px 60px 60px 60px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
     text-align: justify;
+    transition: background-color 0.3s;
+}
+
+.summary-card:hover {
+    background-color: #d9d9d9;
 }
 
 .title-text {
@@ -265,6 +271,11 @@ button:hover {
     color: #191919;
     opacity: 0.8;
 }
+
+.hidden {
+    display: none;
+}
+
 
 .dot {
     display: inline-block;
@@ -322,5 +333,10 @@ button:hover {
     #dark-bg-curv{
         padding-top: 150px;
     }
+    .summary-card {
+        text-align: left;
+    }
 }
+
+
 
